# utility-scripts

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.adoc  Readme.md  poetry.lock.license  pyproject.toml  uv.lock.license
.github/workflows/: lint.yml
src/utility_scripts/: create_guest_users.py  fix_webhook_url.py  jenkins_update_artemis_8_urls.py  print_assessment.py
