# SPDX-FileCopyrightText: 2024 Artemis UniPassau Utility Scripts Contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "utility-scripts"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: EUPL-1.2"
]
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "python-gitlab>=5.6.0",
    "python-jenkins>=1.8.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "reuse>=5.0.0",
    "ruff>=0.10.0",
    "types-requests>=2.32.0.20250306",
]


[project.scripts]
create-guest-users = "utility_scripts.create_guest_users:main"
fix-webhook-url = "utility_scripts.fix_webhook_url:main"
jenkins-update-artemis-8-urls = "utility_scripts.jenkins_update_artemis_8_urls:main"
print-assessment = "utility_scripts.print_assessment:main"


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
indent = "    "


[tool.ruff]
line-length = 88
output-format = "full"
exclude = [
    "docs",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
